--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# As keys "aws_access_key_id" e "aws_secret_access_key" são forecidas pelo AWS CLI
+# E não devem ser inseridas neste arquivo por medida de segurança
 
+aws_access_key_id=
+aws_secret_access_key=
+amazon.dynamodb.endpoint=http://localhost:8000
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#springdoc.swagger-ui.path=/swagger-ui-heroes-reactive-api.html
+springdoc.swagger-iu.path=/swagger-ui.html
