inclusion of some simple unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # As keys "aws_access_key_id" e "aws_secret_access_key" são forecidas pelo AWS CLI
-# E não devem ser inseridas neste arquivo por medida de segurança
+# E não foram inseridas neste arquivo por medida de segurança
 
 aws_access_key_id=
 aws_secret_access_key=
